--- a/.github/workflows/build-docker-container.yaml
+++ b/.github/workflows/build-docker-container.yaml
@@ -13,9 +13,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
+      - name: git config
+        run: |
+          git config user.name github-actions
+          git config user.email support@senzing.com
       - name: Print environment variables
         run: printenv
       - name: Git Merge With Main
         run: git merge origin/main
+      - name: Git Update submodules
+        run: git submodule update --init --recursive
       - name: Build Docker container
         run: make docker-build
