--- a/.github/workflows/docker-build-container.yaml
+++ b/.github/workflows/docker-build-container.yaml
@@ -1,12 +1,11 @@
-name: build-docker-container.yaml
+name: docker-build-container.yaml
 on:
   pull_request:
     branches:
       - main
   workflow_dispatch:
 jobs:
-  buildDockerContainer:
-    name: Build Docker container
+  docker-build-container:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -17,10 +16,6 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email support@senzing.com
-      - name: Print environment variables
-        run: printenv
-      - name: Git Merge With Main
-        run: git merge origin/main
       - name: Git Update submodules
         run: git submodule update --init --recursive
       - name: Build Docker container
