--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -14,4 +14,5 @@ jobs:
           image-repository: senzing/test-ground
           image-tag: ${{ github.ref_name }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          platforms: "linux/amd64,linux/arm64"
           username: ${{ secrets.DOCKERHUB_USERNAME }}
