--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -1,19 +1,18 @@
 name: docker-push-containers-to-dockerhub.yaml
-
 on:
   push:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
-
 jobs:
   docker-push-containers-to-dockerhub:
     runs-on: ubuntu-latest
     steps:
       - name: Build docker image and push to DockerHub
-        uses: Senzing/github-action-docker-buildx-build@latest
+        uses: senzing-factory/github-action-docker-buildx-build@latest
         with:
           build-options: "--push"
           image-repository: senzing/test-ground
           image-tag: ${{ github.ref_name }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          platforms: "linux/amd64,linux/arm64"
           username: ${{ secrets.DOCKERHUB_USERNAME }}
