senzing-factory/build-resources#69 cleanup workflows

--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -1,14 +1,16 @@
-name: docker-push-containers-to-dockerhub.yaml
+name: docker push containers to dockerhub
+
 on:
   push:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
+
 jobs:
   docker-push-containers-to-dockerhub:
     runs-on: ubuntu-latest
     steps:
-      - name: Build docker image and push to DockerHub
-        uses: senzing-factory/github-action-docker-buildx-build@latest
+      - name: build docker image and push to DockerHub
+        uses: senzing-factory/github-action-docker-buildx-build@v1
         with:
           build-options: "--push"
           image-repository: senzing/test-ground
