--- a/.github/workflows/lint-workflows.yaml
+++ b/.github/workflows/lint-workflows.yaml
@@ -1,10 +1,10 @@
-name: 'lint workflows'
+name: lint workflows
 
 on:
-  push:
-    branches-ignore: [main]
   pull_request:
     branches: [main]
+  push:
+    branches-ignore: [main]
 
 permissions:
   contents: read
