--- a/.github/workflows/add-to-project-garage.yaml
+++ b/.github/workflows/add-to-project-garage.yaml
@@ -6,14 +6,15 @@ on:
       - opened
       - reopened
 
+permissions:
+  repository-projects: write
+
 jobs:
   add-to-project:
-    name: add issue to project
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: assign issue to project
-        uses: actions/add-to-project@v0.6.1
-        with:
-          project-url: https://github.com/orgs/${{ github.repository_owner }}/projects/${{ vars.SENZING_PROJECT_GARAGE }}
-          github-token: ${{ secrets.SENZING_GITHUB_ACCESS_TOKEN }}
+    secrets:
+      SENZING_GITHUB_PROJECT_RW_TOKEN: ${{ secrets.SENZING_GITHUB_PROJECT_RW_TOKEN }}
+    uses: senzing-factory/build-resources/.github/workflows/add-to-project.yaml@v1
+    with:
+      classic: false
+      project-number: ${{ vars.SENZING_PROJECT_GARAGE }}
+      org: ${{ vars.SENZING_GITHUB_ACCOUNT_NAME }}
