--- a/.github/workflows/lint-workflows.yaml
+++ b/.github/workflows/lint-workflows.yaml
@@ -14,4 +14,4 @@ permissions:
 
 jobs:
   lint-workflows:
-    uses: senzing-factory/build-resources/.github/workflows/lint-workflows.yaml@main
+    uses: senzing-factory/build-resources/.github/workflows/lint-workflows.yaml@v2
