--- a/.github/workflows/docker-push-containers-to-dockerhub.yaml
+++ b/.github/workflows/docker-push-containers-to-dockerhub.yaml
@@ -13,12 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get repository name
+        id: repo-basename
+        run: |
+          echo "repo=$(basename ${{ github.repository }})" >> "$GITHUB_OUTPUT"
+        shell: bash
+
       - name: build docker image and push to DockerHub
         uses: senzing-factory/github-action-docker-buildx-build@v2
         with:
-          build-options: "--push"
-          image-repository: senzing/test-ground
+          image-repository: senzing/${{ steps.repo-basename.outputs.repo }}
           image-tag: ${{ github.ref_name }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-          platforms: "linux/amd64,linux/arm64"
+          push: true
           username: ${{ secrets.DOCKERHUB_USERNAME }}
