--- a/.github/workflows/lint-workflows.yaml
+++ b/.github/workflows/lint-workflows.yaml
@@ -6,12 +6,13 @@ on:
   push:
     branches-ignore: [main]
 
-permissions:
-  contents: read
-  packages: read
-  pull-requests: read
-  statuses: write
+permissions: {}
 
 jobs:
   lint-workflows:
+    permissions:
+      contents: read
+      packages: read
+      pull-requests: read
+      statuses: write
     uses: senzing-factory/build-resources/.github/workflows/lint-workflows.yaml@v3
