--- a/.github/workflows/verify-dockerfile-refreshed-at-updated.yaml
+++ b/.github/workflows/verify-dockerfile-refreshed-at-updated.yaml
@@ -2,21 +2,41 @@ name: Verify Dockerfile REFRESHED_AT Updated
 
 on:
   pull_request:
-    paths:
-      - "**/Dockerfile*"
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
-  check-refreshed-at:
-    name: Check REFRESHED_AT in Dockerfiles
+  detect-changes:
+    name: Detect Dockerfile Changes
+    outputs:
+      dockerfiles: ${{ steps.filter.outputs.dockerfiles }}
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
 
-    # Skip this workflow for Renovate bot PRs
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            dockerfiles:
+              - '**/Dockerfile*'
+
+  check-refreshed-at:
+    name: Check REFRESHED_AT in Dockerfiles
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+
+    # Skip for Renovate and if no Dockerfiles changed
     if: |
+      (github.actor != 'renovate[bot]' && github.actor != 'renovate') &&
       github.event_name != 'pull_request' || 
-      (github.actor != 'renovate[bot]' && github.actor != 'renovate')
+      contains(github.event.pull_request.changed_files, 'Dockerfile')
 
     steps:
       - uses: actions/checkout@v5
@@ -149,3 +169,23 @@ jobs:
         if: success()
         run: |
           echo "[INFO] All REFRESHED_AT lines have been properly updated"
+
+  dockerfile-check-complete:
+    name: Dockerfile Check Status
+    runs-on: ubuntu-latest
+    needs: [check-refreshed-at]
+    if: always()
+
+    steps:
+      - name: Check status
+        run: |
+          if [[ "${{ needs.check-refreshed-at.result }}" == "failure" ]]; then
+            echo "::error::[ERROR] REFRESHED_AT check failed"
+            exit 1
+          elif [[ "${{ needs.check-refreshed-at.result }}" == "skipped" ]]; then
+            echo "[INFO] No Dockerfiles modified or Renovate bot PR - check skipped (OK)"
+            exit 0
+          else
+            echo "[INFO] REFRESHED_AT check passed"
+            exit 0
+          fi
