--- a/.github/linters/actionlint.yml
+++ b/.github/linters/actionlint.yml
@@ -1,4 +1,4 @@
 paths:
-  verify-dockerfile-refreshed-at-updated.yaml:
+  .github/workflows/verify-dockerfile-refreshed-at-updated.yaml:
     ignore:
       - 'property "detect-changes" is not defined in object type {}'
