--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,14 @@
-.github/
-docs/
 .DS_Store
+.github/
 .gitignore
 .project
 .pydevproject
 CHANGELOG.md
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
-docker-compose.test.yml
+docker-compose.test.yaml
+docs/
+docs/
 LICENSE
 Makefile
 README.md
