--- a/.github/workflows/docker-build-container.yaml
+++ b/.github/workflows/docker-build-container.yaml
@@ -1,10 +1,14 @@
-name: docker build container
+name: Docker build container
 
 on:
   pull_request:
     branches:
       - main
   workflow_dispatch:
+
+concurrency:
+  group: docker-build-container-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 
 permissions: {}
 
@@ -21,7 +25,7 @@ jobs:
           echo "repo=$(basename ${{ github.repository }})" >> "$GITHUB_OUTPUT"
         shell: bash
 
-      - name: build docker image
+      - name: Build docker image
         uses: senzing-factory/github-action-docker-buildx-build@v2
         with:
           image-repository: senzing/${{ steps.repo-basename.outputs.repo }}
