--- a/.github/workflows/docker-verify-refreshed-at-updated.yaml
+++ b/.github/workflows/docker-verify-refreshed-at-updated.yaml
@@ -2,6 +2,11 @@ name: Docker verify REFRESHED_AT Updated
 
 on:
   pull_request:
+    branches: [main]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 
 permissions: {}
 
