#148 Sync with other templates (#151)
* #148 Work on concurrency:

* #148 Work on concurrency: - 2

* #148 Sync with template-repository

* #148 Sync with template-repository

* add default timeout

---------

Co-authored-by: Sam <109683132+kernelsam@users.noreply.github.com>

--- a/.github/workflows/docker-build-container.yaml
+++ b/.github/workflows/docker-build-container.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: docker-build-container-${{ github.head_ref || github.ref_name }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
 
 permissions: {}
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: Get repository name
