--- a/.github/workflows/docker-verify-refreshed-at-updated.yaml
+++ b/.github/workflows/docker-verify-refreshed-at-updated.yaml
@@ -15,4 +15,5 @@ jobs:
     name: Verify Dockerfiles REFRESHED_AT Updated
     permissions:
       contents: read
+      pull-requests: read
     uses: senzing-factory/build-resources/.github/workflows/verify-dockerfile-refreshed-at-updated.yaml@v4
